part2/2.3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
  namespace: exercises
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: log-output
                port:
                  number: 80
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong
                port:
                  number: 80
